fix z-index of nav

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -75,6 +75,7 @@ nav .strelka {
   position: fixed;
   left: 30px;
   top: 50px;
+  z-index: 9;
 }
 
 nav ul.active {
